crates/pgls_pretty_print/tests/snapshots/multi/tests__gist_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/gist_60.sql
snapshot_kind: text
---
CREATE TABLE gist_point_tbl ( id INT, p point );

CREATE INDEX "gist_pointidx" ON gist_point_tbl USING gist
(
  p
);

CREATE INDEX "gist_pointidx2" ON gist_point_tbl USING gist
(
  p
) WITH (buffering = 'on',
fillfactor = 50);

CREATE INDEX "gist_pointidx3" ON gist_point_tbl USING gist
(
  p
) WITH (buffering = off);

CREATE INDEX "gist_pointidx4" ON gist_point_tbl USING gist
(
  p
) WITH (buffering = auto);

DROP INDEX
"gist_pointidx2",
"gist_pointidx3",
"gist_pointidx4";

CREATE INDEX "gist_pointidx5" ON gist_point_tbl USING gist
(
  p
) WITH (buffering = invalid_value);

CREATE INDEX "gist_pointidx5" ON gist_point_tbl USING gist
(
  p
) WITH (fillfactor = 9);

CREATE INDEX "gist_pointidx5" ON gist_point_tbl USING gist
(
  p
) WITH (fillfactor = 101);

INSERT INTO gist_point_tbl (id,
p)
SELECT
  g,
  point(
  g * 10,
  g * 10
  )
FROM
  generate_series(
  1,
  10000
  ) AS g;

INSERT INTO gist_point_tbl (id,
p)
SELECT
  g + 100000,
  point(
  g * 10 + 1,
  g * 10 + 1
  )
FROM
  generate_series(
  1,
  10000
  ) AS g;

DELETE FROM gist_point_tbl WHERE id % 2 = 1;

DELETE FROM gist_point_tbl WHERE id > 5000;

VACUUM (ANALYZE) gist_point_tbl;

ALTER INDEX gist_pointidx SET (fillfactor = 40);

REINDEX INDEX gist_pointidx;

CREATE TABLE gist_tbl ( b box, p point, c circle );

INSERT INTO gist_tbl
SELECT
  box(
  point(
  0.05 * i,
  0.05 * i
  ),
  point(
  0.05 * i,
  0.05 * i
  )
  ),
  point(
  0.05 * i,
  0.05 * i
  ),
  circle(
  point(
  0.05 * i,
  0.05 * i
  ),
  1.0
  )
FROM
  generate_series(
  0,
  10000
  ) AS i;

VACUUM (ANALYZE) gist_tbl;

SET enable_seqscan = off;

SET enable_bitmapscan = off;

SET enable_indexonlyscan = on;

CREATE INDEX "gist_tbl_point_index" ON gist_tbl USING gist
(
  p
);

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )
ORDER BY p <-> point(
  0.201,
  0.201
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )
ORDER BY p <-> point(
  0.201,
  0.201
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )
ORDER BY point(
  0.101,
  0.101
  ) <-> p;

SELECT
  p
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )
ORDER BY point(
  0.101,
  0.101
  ) <-> p;

SELECT
  p
FROM
  (VALUES (box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )),
  (box(
  point(
  0.5,
  0.5
  ),
  point(
  0.75,
  0.75
  )
  )),
  (box(
  point(
  0.8,
  0.8
  ),
  point(
  1.0,
  1.0
  )
  ))) AS v (bb)
  INNER JOIN LATERAL (SELECT
    p
  FROM
    gist_tbl
  WHERE
    p <@ bb
  ORDER BY p <-> bb[0]
  LIMIT 2) AS ss
  ON TRUE;

SELECT
  p
FROM
  (VALUES (box(
  point(
  0,
  0
  ),
  point(
  0.5,
  0.5
  )
  )),
  (box(
  point(
  0.5,
  0.5
  ),
  point(
  0.75,
  0.75
  )
  )),
  (box(
  point(
  0.8,
  0.8
  ),
  point(
  1.0,
  1.0
  )
  ))) AS v (bb)
  INNER JOIN LATERAL (SELECT
    p
  FROM
    gist_tbl
  WHERE
    p <@ bb
  ORDER BY p <-> bb[0]
  LIMIT 2) AS ss
  ON TRUE;

DROP INDEX "gist_tbl_point_index";

CREATE INDEX "gist_tbl_box_index" ON gist_tbl USING gist
(
  b
);

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  );

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  );

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  )
ORDER BY b <-> point(
  5.2,
  5.91
  );

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  )
ORDER BY b <-> point(
  5.2,
  5.91
  );

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  )
ORDER BY point(
  5.2,
  5.91
  ) <-> b;

SELECT
  b
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  )
ORDER BY point(
  5.2,
  5.91
  ) <-> b;

DROP INDEX "gist_tbl_box_index";

CREATE INDEX "gist_tbl_multi_index" ON gist_tbl USING gist
(
  p,
  c
);

SELECT
  p,
  c
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  );

SELECT
  b,
  p
FROM
  gist_tbl
WHERE
  b <@ box(
  point(
  4.5,
  4.5
  ),
  point(
  5.5,
  5.5
  )
  ) AND
  p <@ box(
  point(
  5,
  5
  ),
  point(
  6,
  6
  )
  );

DROP INDEX "gist_tbl_multi_index";

CREATE INDEX "gist_tbl_multi_index" ON gist_tbl USING gist
(
  (circle(
  p,
  1
  )),
  p
);

SELECT
  circle(
  p,
  1
  )
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  5,
  5
  ),
  point(
  5.3,
  5.3
  )
  );

SELECT
  circle(
  p,
  1
  )
FROM
  gist_tbl
WHERE
  p <@ box(
  point(
  5,
  5
  ),
  point(
  5.3,
  5.3
  )
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  circle(
  p,
  1
  ) @> circle(
  point(
  0,
  0
  ),
  0.95
  );

SELECT
  p
FROM
  gist_tbl
WHERE
  circle(
  p,
  1
  ) @> circle(
  point(
  0,
  0
  ),
  0.95
  );

SELECT COUNT(*) FROM gist_tbl;

SELECT COUNT(*) FROM gist_tbl;

SELECT
  p
FROM
  gist_tbl
ORDER BY circle(
  p,
  1
  ) <-> point(
  0,
  0
  )
LIMIT 1;

SELECT
  p
FROM
  gist_tbl
ORDER BY circle(
  p,
  1
  ) <-> point(
  0,
  0
  )
LIMIT 1;

CREATE INDEX "gist_tbl_box_index_forcing_buffering" ON gist_tbl USING gist
(
  p
) WITH (buffering = 'on',
fillfactor = 50);

RESET enable_seqscan;

RESET enable_bitmapscan;

RESET enable_indexonlyscan;

DROP TABLE "gist_tbl";

CREATE UNLOGGED TABLE gist_tbl ( b box );

CREATE INDEX "gist_tbl_box_index" ON gist_tbl USING gist
(
  b
);

INSERT INTO gist_tbl
SELECT
  box(
  point(
  0.05 * i,
  0.05 * i
  )
  )
FROM
  generate_series(
  0,
  10
  ) AS i;

DROP TABLE "gist_tbl";
